Finish htlm-css task 3

--- a/index.html
+++ b/index.html
@@ -42,15 +42,10 @@
                     <p class="detail">
                         A backend web developer with a background in Electrical and Electronics Engineering
                         <span> </span>from Covenant University, with a learned sense of graphic design.<br /><br />
-                        Experienced with Node/Express Javascript framework
-                        <span> </span>for building APIs such as APIs for real estate businesses, social media
-                        <span> </span>and company-specific websites.<br /><br />
-                        Conversant with web development tools such as git and GitHub for version control;
-                        <span> </span>Adobe Illustrator, Photoshop and XD for visual design;
-                        <span> </span>HTML, CSS, JS, Bootstrap, JQuery, Ajax, and React for frontend development;
-                        <span> </span>Node/Express for backend development;
-                        <span> </span>CI/CD with Travis CI and hosting on Heroku.<br /><br />
-                        <span> </span>Familiar with web development practices such as TDD and Agile development.
+                        <span> </span>I love programming, dancing, preparing food and helping people out.
+                        <span> </span>This joy of helping people is what fuels my drive in blessing the
+                        <span> </span>world with tech solutions that I can provide, with the combination of my
+                        <span> </span>developed intelligences, attained skills, and network of people.
                     </p>
                 </div>
                 <div class="date-of-birth">
@@ -59,7 +54,7 @@
                 </div>
                 <div class="address">
                     <p class="desc">Address</p>
-                    <p class="detail">Ijaiye Agege, Lagos state.</p>
+                    <p class="detail">Ijaiye Medium Housing Estate, Agege, Lagos state.</p>
                 </div>
                 <div class="home-town">
                     <p class="desc">Home town</p>
